<resources>
    <string name="app_name">model</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="dob">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="update">Update Profile</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
</resources>
