<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfile">

    <TextView
    android:id="@+id/username"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="36dp"
    android:layout_marginTop="60dp"
    android:text="@string/username"
    android:textSize="18sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="90dp"
        android:text="@string/dob"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <TextView
    android:id="@+id/password"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="36dp"
    android:layout_marginTop="32dp"
    android:text="@string/password"
    android:textSize="18sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/dob" />

    <TextView
    android:id="@+id/gender"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="44dp"
    android:layout_marginTop="32dp"
    android:layout_marginBottom="8dp"
    android:text="@string/gender"
    android:textSize="18sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/password"
    app:layout_constraintVertical_bias="0.004" />

    <EditText
    android:id="@+id/user"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="24dp"
    android:ems="10"
    android:inputType="textPersonName"
    app:layout_constraintBaseline_toBaselineOf="@+id/username"
    app:layout_constraintEnd_toEndOf="parent" />

    <EditText
    android:id="@+id/db"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="24dp"
    android:ems="10"
    android:inputType="textPersonName"
    app:layout_constraintBaseline_toBaselineOf="@+id/dob"
    app:layout_constraintEnd_toEndOf="parent" />

    <EditText
    android:id="@+id/word"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="24dp"
    android:ems="10"
    android:inputType="textPersonName"
    app:layout_constraintBaseline_toBaselineOf="@+id/password"
    app:layout_constraintEnd_toEndOf="parent" />

    <RadioButton
    android:id="@+id/m"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="44dp"
    android:text="@string/male"
    android:textSize="18sp"
    app:layout_constraintBaseline_toBaselineOf="@+id/gender"
    app:layout_constraintEnd_toStartOf="@+id/f" />

    <RadioButton
    android:id="@+id/f"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="52dp"
    android:text="@string/female"
    android:textSize="18sp"
    app:layout_constraintBaseline_toBaselineOf="@+id/m"
    app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/edit"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:text="@string/edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.649" />

    <Button
        android:id="@+id/delete"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginEnd="76dp"
        android:text="@string/delete"
        app:layout_constraintBaseline_toBaselineOf="@+id/edit"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/search"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/search"
        app:layout_constraintBottom_toTopOf="@+id/db"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.769"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user"
        app:layout_constraintVertical_bias="0.384" />
</androidx.constraintlayout.widget.ConstraintLayout>