<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home">

    <TextView
        android:id="@+id/username"
        android:layout_width="117dp"
        android:layout_height="33dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="56dp"
        android:text="@string/username"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/password"
        android:layout_width="114dp"
        android:layout_height="34dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="32dp"
        android:text="@string/password"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <EditText
        android:id="@+id/user"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/username"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/login"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="328dp"
        android:layout_marginBottom="8dp"
        android:text="@string/login"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.008" />

    <Button
        android:id="@+id/register"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginEnd="72dp"
        android:text="@string/register"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/login"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>